err/zgeo.plone.kml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zgeo'...
Listing './lib/python3.5/site-packages/zgeo/geographer'...
Listing './lib/python3.5/site-packages/zgeo/kml'...
Compiling './lib/python3.5/site-packages/zgeo/kml/browser.py'...
***   File "./lib/python3.5/site-packages/zgeo/kml/browser.py", line 9
    raise Exception, "Five's ViewPageTemplateFile doesn't work with named templating"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zgeo/plone'...
Listing './lib/python3.5/site-packages/zgeo/plone/kml'...
Listing './lib/python3.5/site-packages/zgeo/plone/kml/Extensions'...
Listing './lib/python3.5/site-packages/zgeo/plone/kml/profiles'...
Listing './lib/python3.5/site-packages/zgeo/plone/kml/profiles/default'...
Listing './lib/python3.5/site-packages/zgeo/plone/kml/tests'...
Listing './lib/python3.5/site-packages/zgeo.geographer-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/zgeo.kml-0.4.egg-info'...
Listing './lib/python3.5/site-packages/zgeo.plone.kml-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
